feat: Billing and project doc
